# CodeFestWeek

./: CMakeLists.txt  README.md  makefile
include/: traitement.h
lib/: libfakenect.so.0.7.5  libfreenect.so.0.7.5  libfreenect_sync.so.0.7.5
src/: calibrate-qt-main.cpp  calibrate-qt.cpp  our_test.cpp  testZZZ.cpp  testZZZ.hh  traitement.cpp  traitement.h
